# auto-analytics

./: .gitignore  CLAUDE.md  README.md  debug_workflow.py  demo_user_interaction.py  pyproject.toml  test_auto_progression.py  test_auto_progression_simple.py  test_complete_workflow.py  test_html_generation.py  test_workflow_controller.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
auto-analytics-agent/: agent.py  custom_agent.py  mytools.py  workflow.py  workflow_controller.py  workflow_resumption.py
auto-analytics-agent/sub_agent/: data_analyzer_agent.py  data_retrieval_agent.py  html_report_agent.py  request_interpreter_agent.py  table_explorer.py  table_explorer_agent.py
auto-analytics-agent/tools/: __init__.py  adk_report_tool.py  exit_tool.py  html_report_generator.py  mcptoolset.py  report_agent_tool.py  report_templates.py  report_utils.py  simple_link_generator.py
auto-analytics-agent/utils/: gemini.py
config/: tools.yaml
doc/: design-specification.md  development-procedure.md
doc/design/: agent-design.md  api-integration-design.md  data-flow-design.md  system-architecture.md
doc/guide/: database-connection-guide.md  toolbox-launch-guide.md  user-interaction-workflow-guide.md
doc/report/: 00001_development_status.md  00002_implementation_analysis.md  00003_initial_setup_complete.md  00004_implementation_status.md  00005_decoupled_architecture_implementation.md  (+1 more)
fastapi-server/: README.md  main.py  requirements.txt
reports/: README.md
scripts/: init-db.sql  start-agent.sh  start-fastapi.sh
(+6 files in other folders)
